# Zombie_vs_Humans

./: CMakeLists.txt  README.txt
Components/: AnimationComponent.cpp  AnimationComponent.h  MovementComponent.cpp  MovementComponent.h  ViewComponent.cpp  ViewComponent.h
Config/: Window.init  summer_map_bounds_arr.map
Entities/: Entity.cpp  Entity.h  FatHuman.cpp  FatHuman.h  Human.cpp  Human.h
ErrorHandling/: FileErrorLog.cpp  FileErrorLog.h  IErrorLog.cpp  IErrorLog.h
Headers/: pch.h
Maps/: Map.cpp  Map.h  SummerMap.cpp  SummerMap.h
Source/: Game.cpp  Game.h  GameTexture.cpp  GameTexture.h  Map.cpp  Map.h
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
graphical_interface/: gui.cpp  gui.h
